--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently 'webpack -w -D' 'nodemon index' "
+    "start": "concurrently 'webpack -w -d' 'nodemon index' "
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.16.0",
     "css-loader": "^0.25.0",
     "html-loader": "^0.4.4",
+    "imports-loader": "^0.6.5",
     "style-loader": "^0.13.1"
   }
 }
