--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "jquery": "^3.1.1",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.2",
     "passport": "^0.3.2",
