--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "jquery": "^3.1.1",
+    "lodash": "^4.16.4",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.2",
     "passport": "^0.3.2",
@@ -25,10 +26,13 @@
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-lodash": "^3.2.9",
     "babel-preset-es2015": "^6.16.0",
     "css-loader": "^0.25.0",
     "html-loader": "^0.4.4",
     "imports-loader": "^0.6.5",
-    "style-loader": "^0.13.1"
+    "lodash-webpack-plugin": "^0.10.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2"
   }
 }
