--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "heroku": "^0.2.0",
     "jquery": "^3.1.1",
     "lodash": "^4.16.4",
     "mongodb": "^2.2.10",
