--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "concurrently 'webpack -w -d' 'nodemon index' "
   },
   "author": "",
-  "license": "ISC",
+  "license": "BSD-2-Clause",
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.1",
@@ -20,6 +20,7 @@
     "lodash": "^4.16.4",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.2",
+    "ng-annotate-loader": "^0.2.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "webpack": "^1.13.2"
@@ -35,5 +36,12 @@
     "lodash-webpack-plugin": "^0.10.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rthames62/matchflick.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rthames62/matchflick/issues"
   }
 }
